--- a/index.html
+++ b/index.html
@@ -4,4 +4,43 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
-</htmle>
+  
+  
+  
+
+
+<div id="kl_wrapper_3" class="kl_flat_sections variation_2 kl_wrapper">
+<div id="kl_banner">
+<h2><span id="kl_banner_left"><span class="kl_mod_num"><i class="far fa-circle" aria-hidden="true">&nbsp;&nbsp;</i><i class="fas fa-circle" aria-hidden="true"></i></span></span><span id="kl_banner_right"> Setting Up an Electronics Lab at Home<br /></span></h2>
+</div>
+<div id="kl_objectives2" class="">
+<h3 class="" style="text-align: center;"><i class="fas fa-vote-yea" aria-hidden="true"> </i>Getting Started</h3>
+<p>Week one is all about getting ourselves set up for success. Please see the topic areas below to make sure that you are prepared for week one and week two.</p>
+<p><span style="font-size: 10pt;"><em><strong>Click on each topic below for more information.</strong></em></span></p>
+</div>
+<div id="kl_panel_block_0">
+<div class="kl_panels_wrapper kl_panels_expander">
+<h3 id="kl_panel_0" class="kl_panel_heading kl_panel_0">Kits</h3>
+<div id="kl_panel_0_content" class="kl_panel_content kl_panel_0">
+<p class="">We are requiring the purchase of materials for this class which we will be using instead of a textbook. There are <strong>two</strong> kits that should be ordered directly from Jameco. <strong>Be sure to use the discount code "<span style="font-size: 11pt;">UOC7" for 7% off. </span></strong></p>
+<h4>The Parts Kit</h4>
+<p class="">This is the the <a href="https://www.jameco.com/z/KIT-COLUMBIA-AUDI104-Columbia-College-AUDI-104-Audio-Electronics_2316343.html" target="_blank" rel="noopener">primary kit</a> that we will use for the majority of our labs. You are expected to have this on our first meeting day</p>
+<h4>The Soldering Kit</h4>
+<p class="">On the Jameco kit page you will see the text "You may also be interested in a <a href="https://www.jameco.com/z/AK-100-Elenco-Electronics-Practice-Soldering-Kit-with-Soldering-Iron_2124218.html">Solder Practice kit that includes a soldering iron</a> (PN: 2124218)." You will need to purchase this as well.</p>
+<p class="">The soldering kit is separate so that students who already have access to soldering tools will have the option to only purchase the circuit board and not the iron. You may also choose to wait to purchase this kit until week 6 if you want to spread the cost out. This will mean paying more in shipping. Please contact me directly with any questions.</p>
+</div>
+<h3 id="kl_panel_1" class="kl_panel_heading kl_panel_1">Reading</h3>
+<div id="kl_panel_1_content" class="kl_panel_content kl_panel_1">
+<p>This week's lab will be all about setting up and getting familiar with your electronics lab at home. To support this activity, I am assigning the reading at Makerspace.com called "<a href="https://www.makerspaces.com/basic-electronics/" target="_blank" rel="noopener">Introduction to Basic Electronics</a>" which covers much of the same material we looked at in class. Please read everything up to "How to Determine a Resistor Size". That starts getting into math and then project examples. We will cover that in future weeks.</p>
+</div>
+<h3 id="kl_panel_2" class="kl_panel_heading kl_panel_2">Fritzing Software</h3>
+<div id="kl_panel_2_content" class="kl_panel_content kl_panel_2">
+<p>In this class, we will be using an open-source program called <a href="https://fritzing.org/" target="_blank" rel="noopener">Fritzing</a> to design and share circuit layouts. Please create a Fritzing account and download the application so that you can open and manipulate Fritzing files. NOTE: you must create an account in order to download the program without paying a compulsory donation.</p>
+</div>
+</div>
+</div>
+</div>
+<div id="kl_panel_2_content" class="kl_panel_content kl_panel_2">
+<p>&nbsp;</p>
+</div>
+</html>
